2007-06-15  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-memory.c (syx_memory_load_image): do not add extra byte for strings
	(strndup): added if missing in other environments
	(memdup): same

	* SConstruct: added various options and organized for a better debugging

	* syx/syx-object.c (syx_string_new): add 1 to the size to hold NULL char
	(syx_symbol_new): same

	* syx/syx-interp.c (syx_interp_mark_arguments): do not alloc if not arguments are given
	Do not pass the execution state trough parameters, instead keep it global.
	This would produce a better C/Smalltalk interface

	* st/kernel/ObjectMemory.st: adjusted
	
	* st/kernel/SystemDictionary.st (quit:): added with relative primitive

	* syx/syx-error.c: added
	
	* st/kernel/String.st (size): subtract 1 whith is the NULL char

2007-06-14  Luca Bruno  <lethalman88@gmail.com>

	* Removed Glib dependency

	* Removed autotools replaced with Scons build system

2007-06-13  Luca Bruno  <lethalman88@gmail.com>

	* Just work on Windows using MinGW

	* syx/syx-interp.c (syx_interp_send_message): if the message is unary don't create an empty array
	(syx_interp_send_super): same
	(syx_interp_send_unary): same

	* syx/syx-parser.h (struct SyxParser): renamed with starting _

	* syx/syx-scheduler.c (syx_scheduler_quit): fixed for now

	* Everything has been documented for Doxygen
	
	* syx/syx-scheduler.c (syx_scheduler_quit): rewrote after GMainLoop has been removed

	* syx/syx-bytecode.c (syx_bytecode_free): free_segment is not needed anymore

	* syx/syx-primitives.c (ArrayedCollection_replaceFromWith): added

	* syx/syx-memory.c (syx_memory_alloc): removed _syx_memory_top
	(syx_memory_init): removed _syx_memory_top and fill _syx_freed_memory_top. Realloc _syx_freed_memory too
	(syx_memory_free_all): removed, we can use syx_memory_clear

2007-06-12  Luca Bruno  <lethalman88@gmail.com>

	* Everything we need to let the Console work men
