@@ -93,6 +93,7 @@ typedef enum
     SYX_TOKEN_END,
     SYX_TOKEN_INT_CONST,
     SYX_TOKEN_CHAR_CONST,
+    SYX_TOKEN_FLOAT_CONST,
     SYX_TOKEN_CLOSING,
     SYX_TOKEN_ARRAY_BEGIN,
 
