@@ -38,7 +38,7 @@ void syx_exec_state_free (void);
 /* Primitives */
 
 //! The number of primitives
-#define SYX_PRIMITIVES_MAX 42
+#define SYX_PRIMITIVES_MAX 51
 
 typedef syx_bool (* SyxPrimitiveFunc) (SyxExecState *es, SyxOop method);
 #define SYX_FUNC_PRIMITIVE(name)					\
