@@ -13,6 +13,7 @@ struct SyxToken {
   union
   {
     syx_int32 integer;
+    syx_double floating;
     syx_char character;
     syx_string string;
   } value;
